Fix spacing in .contact-info

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -172,7 +172,8 @@ blockquote {
 }
 
 .contact-info {
-  width: 80%;
+  width: 90%;
+  margin: auto;
   word-wrap: break-word;
 }
 .contact-info p {
